<resources>
    <string name="app_name">thequibblersquiz</string>
    <string name="quiz_title">The Quibbler\'s Quiz</string>
    <string name="player_name">Please enter your name</string>
    <string name="btn_start_quiz">Begin</string>
    <string name="submit">Show my score</string>
    <string name="try_again">Try Again</string>
    <string name="hpImage">Harry, Hermoine, Ron sitting in a room at Hogwarts.</string>
    <string name="question1">Question 1:\nWhat organization did Hermione start in her 4th year?</string>
    <string name="answer1a">Wizards Against the Dark Arts</string>
    <string name="answer1b">Dumbledore\'s Army</string>
    <string name="answer1c">Society for the Promotion of Elfish Welfare</string>
    <string name="answer1d">Witches for Equal Rights</string>
    <string name="question2">Question 2:\nWhat is Lord Voldemort\'s real name</string>
    <string name="answer2a">Tom Marvolo Riddle</string>
    <string name="answer2b">Tom Marvilo Riddle</string>
    <string name="answer2c">Tom Marvin Riddle</string>
    <string name="answer2d">Tom Ravolo Riddle</string>
    <string name="question3">Question 3:\nWhat\’s the LAST line of the book, Harry Potter and the Sorcerer\’s Stone?</string>
    <string name="answer3a">“Goodbye, for now, Hogwarts.”</string>
    <string name="answer3b">“Harry, Ron, and Hermione looked at each other sheepishly and smiled.”</string>
    <string name="answer3c">“I\’m going to have a lot of fun with Dudley this summer…”</string>
    <string name="answer3d">“’Until the fall,’ said Dumbledore with a nod.”</string>
    <string name="question4">Question 4:\nAccording to the Dursleys, how did Harry\’s parents die?</string>
    <string name="answer4a">In a plane crash</string>
    <string name="answer4b">In a train crash</string>
    <string name="answer4c">In a bus crash</string>
    <string name="answer4d">In a car crash</string>
    <string name="question5">Question 5:\nWhat does S.P.E.W. stand for?</string>
    <string name="answer5a">Society For the Promotion of Elfish Welfare</string>
    <string name="answer5b">Society For the Protection of Elves and Wizards</string>
    <string name="answer5c">Support For People, Elves, and Wizards</string>
    <string name="answer5d">Sorority For the Protection of Elves and Wands</string>
    <string name="question6">Question 6:\nIn the Harry Potter series, who are best friends?</string>
    <string name="answer6a">Draco Malfoy</string>
    <string name="answer6b">Hermoine Granger</string>
    <string name="answer6c">Ron Weasley</string>
    <string name="answer6d">Harry Potter</string>
</resources>
